# SMC

./: .gitignore  README.md  app.py  bot.py  data.py  lol_users.json  main.py  nectar.json  new.json  pool.json  pyproject.toml  submissions.json  teams.json  test_replay.osr  tracker.py
cache/: opgg.py.db
static/: style.css
templates/: dash.html  nav.html  pool-old.html  pool.html  settings.html  submissions-old.html  submissions.html  teams.html
