[project]
name = "smc"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.14.1",
    "cloudscraper>=1.2.71",
    "discord-py>=2.7.1",
    "fake-useragent>=2.2.0",
    "fastapi[standard]>=0.139.0",
    "hypixel>=0.8.0",
    "itsdangerous>=2.2.0",
    "jinja2>=3.1.6",
    "opgg-py>=3.1.0",
    "osrparse>=7.0.1",
    "osu-py>=4.2.0",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "urllib3>=2.7.0",
]
